--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -103,7 +103,8 @@
 		"restartTimeUsed": "شروع مجدد زمان استفاده شده",
 		"pleaseEnterAgain": "لطفا مجدد وارد شوید",
 		"newPassword": "گذرواژه جدید",
-		"repeatNewPasswordNotSame": "تکرار گذرواژه جدید یکسان نیست"
+		"repeatNewPasswordNotSame": "تکرار گذرواژه جدید یکسان نیست",
+		"language": "زبان"
 	},
 	"title": {
 		"systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
