feat:( translate :title v6 )

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -41,7 +41,7 @@
 		"userStatus": "User Status",
 		"fileName": "File Name",
 		"type": "Type",
-		"resultScannerStatus": "Result / Scanner Status",
+		"resultScanerStatus": "Result/Scanner Status",
 		"moreDetail": "More Details",
 		"removeSelected": "Remove Selected",
 		"daily": "Daily",
