feat:( translate :title v7 )

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -105,7 +105,10 @@
 		"pleaseEnterAgain": "Please Enter Again",
 		"newPassword": "New Password",
 		"repeatNewPasswordNotSame": "Repeat New Password Is Not The Same.",
-		"language": "Language"
+		"language": "Language",
+		"callServicess": "Call Servicess",
+		"dontHaveAccess": "You dont Have Access",
+		"limitedNumberRequest": "The number of your requests has been limited. Please try again in one minute."
 	},
 	"title": {
 		"systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
