--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -108,7 +108,8 @@
 		"callServicess": "با پشتیبانی تماس بگیرید.",
 		"dontHaveAccess": "شما به این بخش دسترسی ندارید",
 		"needAuthentication": "شما نیاز به احراز هویت دارید",
-		"limitedNumberRequest": "تعداد درخواست‌های شما محدود شده است. یک دقیقه بعد مجددا تلاش کنید."
+		"limitedNumberRequest": "تعداد درخواست‌های شما محدود شده است. یک دقیقه بعد مجددا تلاش کنید.",
+		"pleaseBePatient": "لطفاً شکیبا باشید"
 	},
 	"title": {
 		"systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
