--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -41,7 +41,9 @@
 		"userStatus": "User Status",
 		"fileName": "File Name",
 		"type": "Type",
-		"resultScanerStatus": "Result/Scanner Status",
+		"resultScanerStatusSandbox": "SANDBOX Scanner",
+		"resultScanerStatusClamav": "CLAMAV Scanner",
+		"resultScanerStatusYara": " YARA Scanner",
 		"moreDetail": "More Details",
 		"removeSelected": "Remove Selected",
 		"daily": "Daily",
