--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -41,7 +41,9 @@
 		"userStatus": "وضعیت کاربر",
 		"fileName": "نام فایل",
 		"type": "تایپ",
-		"resultScanerStatus": "نتیجه / وضعیت اسکنر",
+		"resultScanerStatusSandbox": " وضعیت اسکنر SANDBOX",
+		"resultScanerStatusClamav": " وضعیت اسکنر CLAMAV",
+		"resultScanerStatusYara": " وضعیت اسکنر YARA",
 		"moreDetail": "جزییات بیشتر",
 		"removeSelected": "حذف انتخاب",
 		"daily": "روزانه",
