add card extension list

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -67,7 +67,8 @@
     "updateSetting": "Update Settings",
     "update": "Update",
     "saveSettings": "Save Settings",
-    "preparationTheDesktop": "Preparation the Desktop"
+    "preparationTheDesktop": "Preparation the Desktop",
+    "extensionList": "Extension Lists"
   },
   "global": {
     "userName": "Username",
