remove(unnecessary file)

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -114,7 +114,8 @@
     "callServicess": "Call Servicess",
     "dontHaveAccess": "You dont Have Access",
     "limitedNumberRequest": "The number of your requests has been limited. Please try again in one minute.",
-    "pleaseBePatient": "Please be patient"
+    "pleaseBePatient": "Please be patient",
+    "addNewFile": "add new String File"
   },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
