feat ( add new table)

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -58,7 +58,8 @@
     "thisMonth": "This Month",
     "accessSetting": "Access Setting",
     "string": "String",
-    "fileExtension": "File Extension"
+    "fileExtension": "File Extension",
+    "addNewType": "Add New Type"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
