--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -55,9 +55,13 @@
     "thisWeek": "این هفته",
     "thisMonth": "این ماه",
     "accessSetting": "تنظیمات دسترسی",
-    "sandbox": "سندباکس",
-    "clamav": "کلم ای وی",
-    "yara": "یارا"
+    "sandbox": "sandbox",
+    "clamav": "clamav",
+    "yara": "yara",
+    "license_id": "لایسنس",
+    "licenseExpirationDate": "تاریخ انقضالایسنس",
+    "licenseCreation": "تاریخ ایجاد لایسنس",
+    "validLicense": "اعتبارلایسنس"
   },
   "dashboard": {
     "adminLists": "لیست ادمین ها",
