--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -66,7 +66,13 @@
     "validLicense": "اعتبارلایسنس",
     "string": "رشته فایل",
     "fileExtension": "پسوند فایل",
-    "addNewType": "اضافه کردن تایپ جدید"
+    "addNewType": "اضافه کردن تایپ جدید",
+    "httpPort": "http پورت",
+    "httpsPort": "https پورت",
+    "exceededUsage": "مصرف مجاز",
+    "containerId": " کانتینر id",
+    "lastUptime": "اخرین ورود",
+    "lastLoginIp": "اخرین ورود ip"
   },
   "dashboard": {
     "adminLists": "لیست ادمین ها",
