update (add download)

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -79,7 +79,7 @@
     "desktopLists": "Desktop Lists",
     "adminPanel": "Admin Panel",
     "fileScanReports": "File Scan Reports",
-    "numberOfTodayScans": "Number of Scans Done Today",
+    "numbersOfScans": "Number of Scans",
     "dayLeft": "Days Left",
     "setting": "Settings",
     "updateSetting": "Update Settings",
