--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -79,8 +79,8 @@
     "desktopLists": "لیست دسکتاپ ها",
     "adminPanel": "ادمین پنل",
     "fileScanReports": "گزارش اسکن فایل ها",
-    "numberOfTodayScans": "تعداد اسکن های انجام شده امروز",
-    "dayLeft": "روز های باقیمانده",
+    "numbersOfScans": "تعداد اسکن ها",
+    "dayLeft": "روز باقی مانده",
     "setting": "تنظیمات",
     "updateSetting": "بروزرسانی تنظیمات",
     "update": "بروزرسانی",
