--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -142,7 +142,8 @@
     "allowedTypeForDownload": "allowed Type For Download",
     "allowedTypeForUpload": "allowed Type For Upload",
     "doseNot": "does not ",
-    "onlineUsers": "Online Users"
+    "onlineUsers": "Online Users",
+    "week": "week"
   },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
