--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -142,7 +142,8 @@
     "allowedTypeForUpload": "تایپ های مجاز آپلود",
     "allowedTypeForDownload": "تایپ های مجاز دانلود",
     "doesNot": "ندارد",
-    "onlineUsers": "یوزر آنلاین"
+    "onlineUsers": "یوزر آنلاین",
+    "week": "هفته"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
