update ( type: typography & tabel)

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -72,7 +72,8 @@
     "accessCapacity": "authorized capacity",
     "containerId": "container id",
     "lastUptime": "last uptime",
-    "lastLoginIp": "last Login Ip"
+    "lastLoginIp": "last Login Ip",
+    "download": "download"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
