--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -146,11 +146,13 @@
     "onlineUsers": "یوزر آنلاین",
     "week": "هفته",
     "reports": "گزارشات",
-    "selectDate": "انتخاب تاریخ",
-    "monthlySelect": "انتخاب ماهانه",
-    "weeklySelect": "انتخاب هفتگی",
-    "normalSelect": "انتخاب معمولی",
-    "send": "ارسال"
+    "periodOfTime": "بازه زمانی",
+    "monthlySelect": "ماهانه",
+    "weeklySelect": "هفتگی",
+    "arbitrary": "دلخواه",
+    "send": "ارسال",
+    "selectTimeFrame": "بازه ای از زمان را انتخاب کنید",
+    "reportsChart": "نمودارگزارش"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
