--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -73,7 +73,8 @@
     "containerId": " کانتینر id",
     "lastUptime": "آخرین ورود",
     "lastLoginIp": "آخرین ورود ip",
-    "download": "دانلود"
+    "download": "دانلود",
+    "file": "فایل"
   },
   "dashboard": {
     "adminLists": "لیست ادمین ها",
@@ -154,11 +155,14 @@
     "send": "ارسال",
     "selectTimeFrame": "بازه ای از زمان را انتخاب کنید",
     "reportsChart": "نمودارگزارش",
-    "to": "الی"
+    "to": "الی",
+    "enterPriodOfTime": "بازه زمانی مورد نظر را وارد کنید",
+    "noReportAvailable": "درحال حاظر گزارشی وجود ندارد"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
     "systemAdminDescription2": "2- توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
-    "acessTimeModalDescription1": "زمان دسترسی این کاربر به حالت اول بر می گردد. از انجام این کار مطمئن هستید؟"
+    "acessTimeModalDescription1": "زمان دسترسی این کاربر به حالت اول بر می گردد. از انجام این کار مطمئن هستید؟",
+    "extensionListTitle": "برای ایجاد رشته فایل و پسوند فایل جدید ، فایل مرتبط خود را آپلود نماپید."
   }
 }
