--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -154,6 +154,14 @@
     "selectTimeFrame": "بازه ای از زمان را انتخاب کنید",
     "reportsChart": "نمودارگزارش"
   },
+  "groupManagement": {
+    "person": "نفر",
+    "label": "گروه بندی",
+    "createGroup": "ساخت گروه",
+    "editGroup": "ویرایش گروه",
+    "choiceAdmin": "انتخاب ادمین",
+    "choiceUsers": "انتخاب کاربران"
+  },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
     "systemAdminDescription2": "2- توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
