feat ( sessionRecord :tab )

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -153,7 +153,9 @@
     "send": "ارسال",
     "selectTimeFrame": "بازه ای از زمان را انتخاب کنید",
     "reportsChart": "نمودارگزارش",
-    "internetLog": "لاگ های اینترنت"
+    "internetLog": "لاگ های اینترنت",
+    "wholeList": "لیست کلی",
+    "todayList": "لیست امروز"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
