--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -153,7 +153,9 @@
     "arbitrary": "Arbitrary",
     "send": "Send",
     "reportsChart": "ReportsChart",
-    "internetLog": "Internet log"
+    "internetLog": "Internet log",
+    "wholeList": "whole List",
+    "todayList": "toDayList"
   },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
