--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -74,7 +74,7 @@
     "lastUptime": "آخرین ورود",
     "lastLoginIp": "آخرین ورود ip",
     "download": "دانلود",
-    "sessionRecording": "ظبط فعالیت",
+    "sessionRecording": "فعالیت های ظبط شده",
     "play": "پخش",
     "time": "زمان",
     "date": "تاریخ",
