feat ( tooltip title ) fix ( tooltip )

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -80,7 +80,9 @@
     "time": "time",
     "date": "date",
     "day": "day",
-    "file": "File"
+    "file": "File",
+    "edit": "edit",
+    "delete": "delete"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
